Adjusted memory consumption for maven.